# Course-6

./: .env  .gitignore  groupe.json  pyproject.toml  readme.md
blog/: models.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_list.html
config/: asgi.py  settings.py  urls.py
course6/: .env  .env.sample  blog.json  readme.md  users.json
course6/blog/: models.py  urls.py  views.py
course6/blog/migrations/: 0001_initial.py
course6/blog/templates/blog/: article_confirm_delete.html  article_detail.html  (+2 more)
course6/config/: settings.py  urls.py  wsgi.py
course6/mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
course6/mailings/migrations/: 0001_initial.py  0002_initial.py  0002_mailclient.py  0003_remove_message_mailing_remove_message_user_owner.py  0004_mailsettings_user.py  0005_alter_mailsettings_client_and_more.py
course6/mailings/templatetags/: my_tags.py
course6/scheduler_app/: scheduler.py
course6/users/: forms.py  models.py  urls.py  views.py
course6/users/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_verification_key.py
mailings/: forms.py  models.py  services.py
mailings/management/commands/: send.py
mailings/migrations/: 0001_initial.py
mailings/templates/mailings/: client_form.html  contact.html  index.html  logs_list.html  mailsettings_list.html  message_confirm_delete.html  message_list.html  status_mailings.html
myenv/: pyvenv.cfg
users/: forms.py
users/templates/users/: login.html  not_found_user.html  register.html  reset_password.html  user_form.html
(+27 files in other folders)
