[tool.poetry]
name = "c6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
django-apscheduler = "^0.6.2"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
django-dump-load-utf8 = "^0.0.4"
pytz = "^2023.3.post1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
